--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
@@ -35,3 +35,18 @@
     }
   }
 }
+
+.header {
+  // position: fixed;
+  z-index: 100;
+//   //width: calc(100% - 220px);
+  background: #fff;
+  // height: 80px;
+  // padding: 0 1rem;
+  // display: flex;
+  // align-items: center;
+  // justify-content: space-between;
+  // border-bottom: 1px solid #e6e7ec;
+  // transition: left 500ms;
+  padding-top: 15px
+}
