--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -306,13 +306,13 @@
 .header {
   position: fixed;
   z-index: 100;
-  //width: calc(100% - 220px);
+//   //width: calc(100% - 220px);
   background: #fff;
   height: 80px;
   padding: 0 1rem;
   display: flex;
-  // align-items: center;
-  // justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid #e6e7ec;
   transition: left 500ms;
 }
