--- a/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
@@ -1,15 +1,15 @@
-<div class="container-fluid">
+<div>
   <div style="text-align: center; font-weight: bold">
     <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">XÁC THỰC MÃ OTP</h3>
   </div>
   <form [formGroup]="addForm" class="content">
-    <div class="name-item">
+    <div style="text-align: center;">
       <p>Chúng tôi đã gửi mã OTP về số điện thoại <b style="color: #106DB6;">{{this.datasOtp.phone}}</b>.<br>
         Vui lòng nhập mã và tiếp tục thực hiện.</p>
     </div>
 
-    <div class="name-item">
-      <input class="input-otp" id="otp" autocomplete="off" formControlName="otp" placeholder="Nhập OTP"
+    <div class="label-input-otp-mobile">
+      <input class="input-otp-mobile" id="otp" autocomplete="off" formControlName="otp" placeholder="Nhập OTP"
       maxlength="6"
       oninput="this.value = this.value.replace(/[^0-9]/g ,'', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
       >
@@ -26,6 +26,9 @@
     </div>
   </form>
 </div>
+
+
+
 <div class="skeleton-sign position-absolute opacity-0">
   <app-display-signature-image [userOtp]="userOtp" [phoneOtp]="phoneOtp" [isDateTime]="isDateTime"></app-display-signature-image>
 </div>
