--- a/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.scss
@@ -55,6 +55,18 @@
   text-align: center;
 }
 
+.input-otp-mobile {
+  display: block;
+  margin: auto;
+  background: #87CAFF;
+  border-radius: 5px;
+  border: 4px solid #87CAFF;
+  padding: 4px 8px;
+  height: 40px;
+  outline: none;
+  text-align: center;
+}
+
 .label-input-otp {
 
   font-size: 11px;
@@ -65,6 +77,15 @@
   margin-top: 4px;
   text-decoration-line: underline;
   color: #106DB6;
+}
+
+.label-input-otp-mobile {
+
+  text-align: center;
+  color: #106DB6;
+  justify-content: center;
+  text-decoration-line: underline;
+
 
 }
 
