--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -8,7 +8,7 @@
         <h3>{{title | translate}}</h3>
       </div>  
       <div *ngIf="getShowHideSideBar()">
-        <div ngbDropdown class="d-inline-block">
+        <div *ngIf="!this.mobile" ngbDropdown class="d-inline-block">
           <div class="social-icons" ngbDropdownToggle (click)="loadDataNotification()">
             <i *ngIf="numberNotification == 0" class="pi pi-bell p-mr-4 p-text-secondary"></i>
             <i *ngIf="numberNotification > 0" class="pi pi-bell p-mr-4 p-text-secondary" pBadge value="{{numberNotification}}"></i>
@@ -52,7 +52,7 @@
           </div>
         </div>
 
-        <div ngbDropdown class="d-inline-block">
+        <div *ngIf="!this.mobile" ngbDropdown class="d-inline-block">
           <div class="social-icons" ngbDropdownToggle>
               <span class="document"></span>
               <div class="label">{{'document' | translate }}</div>
