phone = email when login type by phone

--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.html
@@ -91,7 +91,7 @@
             style="text-align: center"
           >
             <img
-              *ngIf="this.editUnitRole === true"
+              *ngIf="this.editUnitRole === true && list.status != 'ACTIVE'"
               src="../../../assets/img/icon_edit.svg"
               (click)="editUnit(list.id)"
               width="20px"
