--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -94,7 +94,7 @@
              [ngClass]="changeColorDrag(null, d, true)"
              [ngStyle]="changePosition(d)">
           <div class="name-sig-img-daky">{{(d.name && !d.valueSign) ? d.name : ''}}</div>
-          <app-image-sign-contract *ngIf="![2,3].includes(recipient.status)" [datas]="datas" [view]="[2,3].includes(recipient.status)" [sign]="d"></app-image-sign-contract>
+          <app-image-sign-contract id="image-sign-contract" *ngIf="![2,3].includes(recipient.status)" [datas]="datas" [view]="[2,3].includes(recipient.status)" [sign]="d"></app-image-sign-contract>
           <!-- <app-sign-contract [datas]="datas" [sign]="d" ></app-sign-contract> -->
         </div>
       </div>
@@ -115,8 +115,18 @@
 
 <div *ngIf="this.mobile === true">
 
+      <pdf-viewer [src]="pdfSrcMobile"
+      [render-text]="true"
+      style="width: 100%; height: calc(100vh)"
+      [fit-to-page]="true"
+      ></pdf-viewer>
+
+      <div style="display: none;" *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
+        <app-image-sign-contract id="image-sign-contract-mobile" *ngIf="![2,3].includes(recipient.status)" [datas]="datas" [view]="[2,3].includes(recipient.status)" [sign]="d"></app-image-sign-contract>
+      </div>
+      
     <!-- <iframe #frame [src]="trustedUrl" style="width:100%; height: calc(100vh);" frameBorder="0"  (load)="onLoadPdf($event)"></iframe> -->
-    <div style="background-color: #F2F2F2; text-align: center;overflow: hidden;padding: 5px;display: block;height: 1200px; image-resolution: from-image 300dpi">
+    <!-- <div style="background-color: #F2F2F2; text-align: center;overflow: hidden;padding: 5px;display: block;height: 1200px; image-resolution: from-image 300dpi">
       <div id="pdf-viewer-step-3">
         <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
           <div class="resize-drag not-out-drop" *ngIf="![2,3].includes(recipient.status)"
@@ -127,9 +137,8 @@
                [ngClass]="changeColorDrag(null, d, true)"
                [ngStyle]="changePosition(d)">
             <div class="name-sig-img-daky">{{(d.name && !d.valueSign) ? d.name : ''}}</div>
-            <app-image-sign-contract *ngIf="![2,3].includes(recipient.status)" [datas]="datas" [view]="[2,3].includes(recipient.status)" [sign]="d"></app-image-sign-contract>
             <!-- <app-sign-contract [datas]="datas" [sign]="d" ></app-sign-contract> -->
-          </div>
+          <!-- </div>
         </div>
         <div class="skeleton-sign position-absolute opacity-0">
           <app-display-digital-signature [nameCompany]="nameCompany"></app-display-digital-signature>
@@ -138,7 +147,7 @@
           <app-text-signature-image [textSign]="textSign" [height]="heightText" [width]="widthText"></app-text-signature-image>
         </div>
       </div>
-    </div>
+    </div>  -->
     <div class="label" style="text-align: center; font-weight: bold;" *ngIf="this.datas.roleContractReceived == 3 || this.datas.roleContractReceived == 4">
       <p class="d-flex justify-content-center mb-4 text-uppercase">XÁC NHẬN KÝ HỢP ĐỒNG</p>
       <p class="d-flex mb-2 text-align-left mx-3">Bạn có đồng ý với nội dung, các điều khoản trong hợp đồng và sử dụng phương thức điện tử để thực hiện giao dịch không?</p>
