--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -39,7 +39,7 @@
             </div>
         
             <div class="col-md-6">
-                <div class="label text-color">{{'unit.email' | translate }} <span class="required-title">*</span></div>
+                <div class="label text-color">{{'unit.email' | translate }} </div>
                 <div class="input-data">
                     <input type="text" formControlName="email">
                 </div>
@@ -126,7 +126,7 @@
 
             <!--Số điện thoại-->
             <div class="col-md-6">
-                <div class="label text-color">{{'unit.phone' | translate }} <span class="required-title">*</span></div>
+                <div class="label text-color">{{'unit.phone' | translate }}</div>
                 <div class="input-data">
                     <input type="text" formControlName="phone">
                 </div>
