remove email phone when add unit

--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -3,6 +3,8 @@
       <h3 class="label-header">{{this.datas.title | translate}}</h3>
     </div>
     <form [formGroup]="addForm" class="content">
+
+        <!--Hàng 1!-->
         <div class="row">
             <div class="col-md-6">
                 <div class="label text-color">{{'unit.name' | translate }} <span class="required-title">*</span></div>
@@ -26,6 +28,7 @@
             </div>
         </div>
 
+        <!--Hàng 2!-->
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
                 <div class="label text-color">{{'unit.code' | translate }} <span class="required-title">*</span></div>
@@ -38,7 +41,7 @@
                 </div>
             </div>
         
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <div class="label text-color">{{'unit.email' | translate }} </div>
                 <div class="input-data">
                     <input type="text" formControlName="email">
@@ -47,9 +50,21 @@
                     <div *ngIf="f.email.errors.required">{{'error.user.email.required' | translate}}</div>
                     <div *ngIf="f.email.errors.email">{{'error.user.email.format' | translate}}</div>
                 </div>
+            </div> -->
+
+              <!--Mã số thuế-->
+              <div class="col-md-6">
+                <div class="label text-color">{{'Mã số thuế' | translate }}</div>
+                <div class="input-data">
+                    <input type="text" formControlName="taxCode">
+                </div>
+                <div *ngIf="submitted && f.taxCode.errors" class="invalid">
+                    <div *ngIf="f.taxCode.errors.pattern">{{'Mã số thuế không được chứa ký tự đặc biệt' | translate}}</div>
+                </div>
             </div>
         </div>
 
+        <!--Hàng 3-->
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
                 <div class="label text-color">{{'unit.parent' | translate }} <span class="required-title">*</span></div>
@@ -77,43 +92,6 @@
                 </div>
             </div>
 
-            <!--Mã số thuế-->
-            <div class="col-md-6">
-                <div class="label text-color">{{'Mã số thuế' | translate }}</div>
-                <div class="input-data">
-                    <input type="text" formControlName="taxCode">
-                </div>
-                <div *ngIf="submitted && f.taxCode.errors" class="invalid">
-                    <div *ngIf="f.taxCode.errors.pattern">{{'Mã số thuế không được chứa ký tự đặc biệt' | translate}}</div>
-                </div>
-            </div>
-
-            <!-- <div class="col-md-6">
-                <div class="label text-color">
-                  {{ "Đẩy file hợp đồng lên Bộ công thương" | translate }}
-                  <span class="required-title">*</span>
-                </div>
-                <div class="label text-color">
-                  <p-dropdown
-                    [options]="fileCeCaOptions"
-                    placeholder="Chọn"
-                    optionLabel="name"
-                    [filter]="true"
-                    filterBy="name"
-                    [showClear]="true"
-                    panelStyleClass="font"
-                    formControlName="fileCeCa"
-                  ></p-dropdown>
-                </div>
-                <div *ngIf="submitted && f.fileCeCa.errors" class="invalid">
-                  <div *ngIf="f.fileCeCa.errors.required">
-                    {{ "Lựa chọn này không được để trống" | translate }}
-                  </div>
-                </div>
-              </div> -->
-        </div>
-
-        <div class="row" style="padding-top: 10px;">
             <div class="col-md-6">
                 <div class="label text-color">{{'unit.fax' | translate }}</div>
                 <div class="input-data">
@@ -123,9 +101,21 @@
                     <div *ngIf="f.fax.errors.pattern">{{'Fax không được chứa ký tự đặc biệt' | translate}}</div>
                 </div>
             </div>
+        </div>
+
+        <!-- <div class="row" style="padding-top: 10px;">
+            <div class="col-md-6">
+                <div class="label text-color">{{'unit.fax' | translate }}</div>
+                <div class="input-data">
+                    <input type="text" formControlName="fax">
+                </div>
+                <div *ngIf="submitted && f.fax.errors" class="invalid">
+                    <div *ngIf="f.fax.errors.pattern">{{'Fax không được chứa ký tự đặc biệt' | translate}}</div>
+                </div>
+            </div> -->
 
             <!--Số điện thoại-->
-            <div class="col-md-6">
+            <!-- <div class="col-md-6">
                 <div class="label text-color">{{'unit.phone' | translate }}</div>
                 <div class="input-data">
                     <input type="text" formControlName="phone">
@@ -134,8 +124,8 @@
                     <div *ngIf="f.phone.errors.required">{{'error.user.phone.required' | translate}}</div>
                     <div *ngIf="f.phone.errors.pattern">{{'error.user.phone.format' | translate}}</div>
                 </div>
-            </div>
-        </div>
+            </div> -->
+        <!-- </div> -->
 
         <div class="row" style="padding-top: 10px;">
             <div class="col-md-6" style="align-self: center;">
