--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -81,7 +81,7 @@
               </div>
             </div>
 
-            <div class="form-group forgot-password">
+            <div *ngIf="this.type != 1" class="form-group forgot-password">
               <a href="/forgot-password"
                 >{{ "login.forgot_password" | translate }}?</a
               >
