--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -176,7 +176,7 @@
                         <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgSign_{{index}}" [value]=1/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignEmail' | translate}}
+                        {{'typeOfSignPhone' | translate}}
                       </div>
                     </div>
                   </div>
@@ -426,7 +426,7 @@
                     <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailOrgDoc_{{index}}" [value]=1/>
                   </div>&nbsp;
                   <div>
-                    {{'typeOfSignEmail' | translate}}
+                    {{'typeOfSignPhone' | translate}}
                   </div>
                 </div>
               </div>
@@ -930,7 +930,7 @@
                       <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartSign_{{index}}_{{id}}" [value]=1/>
                     </div>&nbsp;
                     <div>
-                      {{'typeOfSignEmail' | translate}}
+                      {{'typeOfSignPhone' | translate}}
                     </div>
                   </div>
                 </div>
@@ -1187,7 +1187,7 @@
                         <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPartDoc_{{index}}_{{id}}" [value]=1/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignEmail' | translate}}
+                        {{'typeOfSignPhone' | translate}}
                       </div>
                     </div>
                   </div>
@@ -1430,7 +1430,7 @@
                         <input [(ngModel)]="d.typeSign" type="radio" name="checkPhoneMailPerson_{{index}}_{{id}}" [value]=1/>
                       </div>&nbsp;
                       <div>
-                        {{'typeOfSignEmail' | translate}}
+                        {{'typeOfSignPhone' | translate}}
                       </div>
                     </div>
                   </div>
