prevent zoom in ios

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 <div *ngIf="this.mobile == false" class="all">
   <div class="full-height d-flex flex-row">
     <div class="left-background"></div>
