--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -62,7 +62,7 @@
   <div *ngIf="this.mobile">
     <pdf-viewer [src]="pdfSrc"
     [render-text]="true"
-    style="width: 98%; height: calc(100vh)"
+    style="width: 95%; height: calc(70vh); border: 1px;"
     [fit-to-page]="true"
     [show-borders]="true"
     ></pdf-viewer>
