--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -59,7 +59,7 @@
                     <input type="text" formControlName="taxCode">
                 </div>
                 <div *ngIf="submitted && f.taxCode.errors" class="invalid">
-                    <div *ngIf="f.taxCode.errors.pattern">{{'Mã số thuế không được chứa ký tự đặc biệt' | translate}}</div>
+                    <div *ngIf="f.taxCode.errors.pattern">{{'Mã số thuế không đúng định dạng' | translate}}</div>
                 </div>
             </div>
         </div>
